# querymind3

./: README.md  install.ps1  install.sh  pyproject.toml
